<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/operations"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_ac"
                style="@style/ActionButton"
                android:text="@string/button_ac" />

            <TextView
                android:id="@+id/open_bracket"
                style="@style/ActionButton"
                android:text="@string/button_open_bracket" />

            <TextView
                android:id="@+id/close_bracket"
                style="@style/ActionButton"
                android:text="@string/button_close_bracket" />

            <TextView
                android:id="@+id/delimiter"
                style="@style/ActionButton"
                android:text="@string/button_delimiter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_1"
                style="@style/ActionButton"
                android:text="@string/button_1" />

            <TextView
                android:id="@+id/button_2"
                style="@style/ActionButton"
                android:text="@string/button_2" />

            <TextView
                android:id="@+id/button_3"
                style="@style/ActionButton"
                android:text="@string/button_3" />

            <TextView
                android:id="@+id/multiple"
                style="@style/ActionButton"
                android:text="@string/button_multiple" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_4"
                style="@style/ActionButton"
                android:text="@string/button_4" />

            <TextView
                android:id="@+id/button_5"
                style="@style/ActionButton"
                android:text="@string/button_5" />

            <TextView
                android:id="@+id/button_6"
                style="@style/ActionButton"
                android:text="@string/button_6" />

            <TextView
                android:id="@+id/minus"
                style="@style/ActionButton"
                android:text="@string/button_minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_7"
                style="@style/ActionButton"
                android:text="@string/button_7" />

            <TextView
                android:id="@+id/button_8"
                style="@style/ActionButton"
                android:text="@string/button_8" />

            <TextView
                android:id="@+id/button_9"
                style="@style/ActionButton"
                android:text="@string/button_9" />

            <TextView
                android:id="@+id/plus"
                style="@style/ActionButton"
                android:text="@string/button_plus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lt"
                style="@style/ActionButton"
                android:text="@string/button_lt" />

            <TextView
                android:id="@+id/button_0"
                style="@style/ActionButton"
                android:text="@string/button_0" />

            <TextView
                android:id="@+id/gt"
                style="@style/ActionButton"
                android:text="@string/button_gt" />
            <TextView
                android:id="@+id/calculate"
                style="@style/ActionButton"
                android:text="@string/button_calculate" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ternary"
                style="@style/ActionButton"
                android:text="@string/button_ternary"/>

            <TextView
                android:id="@+id/db"
                style="@style/ActionButton"
                android:text="@string/button_double" />

            <TextView
                android:id="@+id/dot"
                style="@style/ActionButton"
                android:text="@string/button_dot" />

            <TextView
                android:id="@+id/del"
                style="@style/ActionButton"
                android:text="@string/button_del" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>